--- a/CSS/main.css
+++ b/CSS/main.css
@@ -24,6 +24,13 @@
     padding: 1.5rem;
 }
 
+.esquerda div {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    margin-bottom: 0.25rem;
+}
+
 .esquerda div p:nth-of-type(1) {
     color: white;
     font-size: 2rem;
@@ -31,13 +38,18 @@
     line-height: 2.375rem;
 }
 
-.esquerda p:nth-of-type(2) {
+.esquerda div p:nth-of-type(2) {
     color: white;
     opacity: 0.5;
 }
 
-.esquerda div {
-    display: flex;
-    align-items: center;
-    gap: 0.6875rem;
+.esquerda p {
+    color: white;
+    line-height: 1.625rem;
+    margin-bottom: 1.625rem;
+}
+
+.esquerda button {
+    padding-block: 1rem;
+    width: 100%;
 }
