--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,9 +1,9 @@
 .superior {
     padding-inline: 1.5rem;
     padding-block: 2rem;
+    background-color: white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    background-color: white;
 }
 
 .superior p:nth-of-type(1) {
@@ -43,7 +43,7 @@
     opacity: 0.5;
 }
 
-.esquerda p {
+.esquerda > p {
     color: white;
     line-height: 1.625rem;
     margin-bottom: 1.625rem;
@@ -52,5 +52,24 @@
 .esquerda button {
     padding-block: 1rem;
     width: 100%;
-    asda
+    color: white;
+    font-size: 1rem;
+    line-height: 1.125rem;
+    border: none;
+    background-color: var(--Bright-Yellow);
+    border-radius: 5px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.0973011);
+}
+
+.direita {
+    background-color: var(--Light-cyan);
+    padding: 1.5rem;
+    border-radius: 0 0 5px 5px;
+}
+
+.direita p {
+    line-height: 1.25rem;
+    color: white;
+    font-size: 0.875rem;
+    opacity: 0.75;
 }
