--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(./CSS/color.css);
 @import url(./CSS/global.css);
 @import url(./CSS/main.css);
+@import url(./CSS/responsivity.css);
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
